--- a/hellotest.html
+++ b/hellotest.html
@@ -7,6 +7,32 @@
     <title>Document</title>
 </head>
 <body>
-    hello test
+    <!-- 宿主文件 -->
+    <div id="app">
+        <h2 :title ="title" >
+            <!-- 插值文本 -->
+            {{title}}
+            <div v-for="c in courses" :key="c">
+                {{ c }}
+            </div>
+        </h2>
+
+    </div>
+    
+    <script src = "vue.js"></script>
+    <script>
+        //1. 创建vue实例
+        const app = new Vue({
+            el: '#app',
+            data() {
+                return {
+                    title: 'Cart',
+                    courses:['web1','web2']
+                }
+            },
+        })
+
+
+    </script>
 </body>
 </html>
